--- a/djangoproject/gestion_stock/templates/lettrevoitureentree.html
+++ b/djangoproject/gestion_stock/templates/lettrevoitureentree.html
@@ -121,6 +121,7 @@
                 },
                 success: function(msg, data, settings){
                     //alert("gg " + msg);
+                    window.location.reload();
                 },
                 failure: function() {
                     alert("fail");
