--- a/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
@@ -156,8 +156,8 @@
     </div>
 </div>
 
-<div class="container">
-    <div class="border shadow-lg p-2 mb-3 bg-white rounded">
+<div class="row">
+    <div class="border shadow-lg p-2 mb-3 bg-white rounded col-auto mx-auto">
         <h5 class="text-center"> <u> Lignes U.M entree</u> (colis)</h5>
         <div class="container">
             <div class="row">
@@ -181,6 +181,7 @@
                                     <th scope="col" class="text-center"><i class="fa fa-redo"></i> </th>
                                     <th scope="col" class="text-center">U.M sortie</th>
                                     <th scope="col" class="text-center">numéro </th>
+                                    <th scope="col" class="text-center"> Code UM </th>
                                     <th scope="col" class="text-center">confirmer</th>
                                     <th scope="col" class="text-center">&nbsp;&nbsp;date expédition&nbsp;&nbsp;</th>
                                     <th scope="col" class="text-center"><i class="fa fa-unlink"></i></th>
@@ -207,10 +208,11 @@
                                         </select><br>déci. litige
                                         <select class="myselect2 form-control-sm text-center" id="decilitigebox{{ items.idColis }}" ></select></td>
                                     <td><input class='form-control text-center' value='{{ items.numerotation }}'></td>
-                                    <td><a href="{% url 'unitemanutentionsortiemodify' %}?id={{ items.fk_UniteManutentionSortie.idUniteManutentionSortie }}"><button type="button" class="btn btn-grey btn-sm"><i class="fa fa-arrow-right" style='color: deepskyblue;font-size: 15px'></i></button></a></td>
-                                    <td><button type="button" class="btn btn-grey btn-sm"><i class="fa fa-redo" style="color: deepskyblue;font-size: 15px"></i></button></td>
+                                        <td><a href="{% url 'unitemanutentionsortiemodify' %}?id={{ items.fk_UniteManutentionSortie.idUniteManutentionSortie }}"><button type="button" class="btn btn-grey btn-sm"><i class="fa fa-arrow-right" style='color: deepskyblue;font-size: 15px'></i></button></a></td>
+                                    <td><button type="button" class="btn btn-grey btn-sm resorting"><i class="fa fa-redo" style="color: deepskyblue;font-size: 15px"></i></button></td>
                                     <td><input class='form-control text-center' disabled value='{{ items.fk_UniteManutentionSortie.idUniteManutentionSortie }}'></td>
                                     <td><input class='form-control text-center' disabled value='{{ items.fk_UniteManutentionSortie.numero }}'></td>
+                                    <td><input class='form-control text-center' disabled value='{{ items.fk_UniteManutentionSortie.fk_BonCommandeSortie.fk_Destinataire.codeUM }}'></td>
                                     {% if items.emplacementConfirme == "1" %}
                                     <td class='text-center'><i class="fa fa-toggle-on mt-2" style='font-size: 25px;cursor:pointer;'></i></td>
                                     {% endif %}
@@ -559,6 +561,7 @@
                             "<td><button type=\"button\" class=\"btn btn-grey btn-sm\"><i class=\"fa fa-redo\" style='color: deepskyblue;'></i></button></td>" +
                             "<td><input class='form-control' disabled></td>" +
                             "<td><input class='form-control' disabled></td>" +
+                            "<td><input class='form-control' disabled></td>" +
                             "<td class='text-center'><i class=\"fa fa-toggle-off mt-2\" style='font-size: 25px;cursor:pointer;'></i></td>" +
                             "<td><input class='form-control' disabled></td>" +
                             "<td><button class='btn btn-sm rounded-pill'><i class=\"fa fa-unlink\" style='color: red;'></i></button></td>" +
@@ -741,13 +744,13 @@
                 var colleit;
 
                 //if ($('#tabblbody tr').eq(idx).find('td').eq(14).find('i').hasClass("fa mt-2 fa-toggle-on")) {
-                if ($('#tabblbody tr').eq(idx).find('td').eq(14).find('.fa-toggle-on').length > 0) {
+                if ($('#tabblbody tr').eq(idx).find('td').eq(15).find('.fa-toggle-on').length > 0) {
                     confirmit = 1;
                 } else {
                     confirmit = 0;
                 }
 
-                if ($('#tabblbody tr').eq(idx).find('td').eq(19).find('i').css('color') == "rgb(0, 0, 0)") {
+                if ($('#tabblbody tr').eq(idx).find('td').eq(20).find('i').css('color') == "rgb(0, 0, 0)") {
                     colleit = 0;
                 } else {
                     colleit = 1;
@@ -765,7 +768,7 @@
                     "decilitige": $('#tabblbody tr').eq(idx).find('td').eq(8).find('select').eq(1).val().trim(),
                     "numerote": $('#tabblbody tr').eq(idx).find('td').eq(9).find('input').val().trim(),
                     "confirme": confirmit,
-                    "retourncolis": $('#tabblbody tr').eq(idx).find('td').eq(17).find('input').val().trim(),
+                    "retourncolis": $('#tabblbody tr').eq(idx).find('td').eq(18).find('input').val().trim(),
                     "colle": colleit
                 };
                 console.log($('#tabblbody tr').eq(idx).find('td').eq(2).find('input').val());
@@ -1101,6 +1104,7 @@
                         "<td><button type=\"button\" class=\"btn btn-grey btn-sm\"><i class=\"fa fa-redo\" style='color: deepskyblue;'></i></button></td>" +
                         "<td><input class='form-control' disabled></td>" +
                         "<td><input class='form-control' disabled></td>" +
+                        "<td><input class='form-control' disabled></td>" +
                         "<td class='text-center'><i class=\"fa fa-toggle-off mt-2\" style='font-size: 25px;cursor:pointer;'></i></td>" +
                         "<td><input class='form-control' disabled></td>" +
                         "<td><button class='btn btn-sm rounded-pill'><i class=\"fa fa-unlink\" style='color: red;'></i></button></td>" +
@@ -1187,6 +1191,7 @@
                 "<td><input class='form-control'></td>" +
                 "<td><button type=\"button\" class=\"btn btn-grey btn-sm\"><i class=\"fa fa-arrow-right\" style='color: deepskyblue;'></i></button></td>" +
                 "<td><button type=\"button\" class=\"btn btn-grey btn-sm\"><i class=\"fa fa-redo\" style='color: deepskyblue;'></i></button></td>" +
+                "<td><input class='form-control' disabled></td>" +
                 "<td><input class='form-control' disabled></td>" +
                 "<td><input class='form-control' disabled></td>" +
                 "<td class='text-center'><i class=\"fa fa-toggle-off mt-2\" style='font-size: 25px;cursor:pointer;'></i></td>" +
@@ -1333,6 +1338,43 @@
                 }
                 else
                     $(this).hide();
+            });
+        });
+        $('.resorting').click(function () {
+            objectid = $(this).parent().parent().find('td').eq(2).find('input').val();
+            $.ajax({
+                type:"POST",    //type de requête utilisé par ajax
+                url:"/ume/delieums/", //lien de la view qui gère la requête post pour trier les colis des um entree vers des bcs avec une ums ouverte
+                data: {
+                    'id': objectid,
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
+                },
+                success: function(msg, data, settings){
+                    console.log("gg " + msg);
+                    //location.reload();
+                    window.location.reload();
+                },
+                failure: function() {
+                    console.log("fail");
+                    //location.reload();
+                }
+            });
+            $.ajax({
+                type:"POST",    //type de requête utilisé par ajax
+                url:"/ume/sortOnecolis/", //lien de la view qui gère la requête post pour trier les colis des um entree vers des bcs avec une ums ouverte
+                data: {
+                    'id': objectid,
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
+                },
+                success: function(msg, data, settings){
+                    console.log("gg " + msg);
+                    //location.reload();
+                    window.location.reload();
+                },
+                failure: function() {
+                    console.log("fail");
+                    //location.reload();
+                }
             });
         });
     });
