--- a/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentreemodify.html
@@ -1341,7 +1341,7 @@
             });
         });
         $('.resorting').click(function () {
-            objectid = $(this).parent().parent().find('td').eq(2).find('input').val();
+            var objectid = $(this).parent().parent().find('td').eq(2).find('input').val();
             $.ajax({
                 type:"POST",    //type de requête utilisé par ajax
                 url:"/ume/delieums/", //lien de la view qui gère la requête post pour trier les colis des um entree vers des bcs avec une ums ouverte
