--- a/djangoproject/gestion_stock/templates/unitemanutentionsortiemodify.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionsortiemodify.html
@@ -40,11 +40,11 @@
                         </div>
                         <div class="form-group">
                             <label for="desti"> destinataire:&nbsp; </label>
-                            <input type="text" class="form-control input-lg text-center" id="desti" readonly="readonly">
+                            <input type="text" class="form-control input-lg text-center" id="desti" readonly="readonly" style="cursor: pointer;">
                         </div>
                         <div class="form-group text-left ml-5">
                             <label for="bcsid"> Bon commande :&nbsp; </label>
-                            <input type="text" class="form-control text-center w-responsive" id="bcsid" placeholder="0" style="" disabled>
+                            <input type="text" class="form-control text-center w-responsive" id="bcsid" placeholder="0" readonly="readonly" style="cursor: pointer;">
                         </div>
                         <div class="form-group text-left ml-5">
                             <label for="blsid"> Bon livraison :&nbsp; </label>
@@ -124,7 +124,7 @@
     <div class="row">
         <div class="border shadow-lg p-2 mb-3 bg-white rounded mx-auto rounded">
             <div class="table-responsive text-nowrap">
-            <h5 class="text-center"> <u> Lignes U.M Sorties</u> (colis)</h5>
+                <h5 class="text-center"> <u> Lignes U.M Sorties</u> (colis)</h5>
                 <table id="tabbl" class="table table-condensed table-sm table-striped table-bordered rounded" cellspacing="0" width="100%">
                     <thead>
                     <tr>
@@ -162,7 +162,7 @@
                         {% if items.emplacementConfirme == "0" %}
                         <td class='text-center'><i class="fa fa-toggle-off mt-2" style='font-size: 25px;cursor:pointer;'></i></td>
                         {% endif %}
-                        <td><button class="deleteur btn btn-sm rounded-pill" id="{{ items.idColis }}"> <i class="fa fa-unlink" style='font-size: 24px;cursor:pointer;color: orangered;'></i> </button> </td>
+                        <td><button class="resorting btn btn-sm rounded-pill" id="{{ items.idColis }}"> <i class="fa fa-unlink" style='font-size: 24px;cursor:pointer;color: orangered;'></i> </button> </td>
                     </tr>
                     {% endif %}
                     {% endfor %}
@@ -314,6 +314,50 @@
             //alert($('#datee').val());
         });
 
+        $('.resorting').click(function () {
+            var objectid = $(this).parent().parent().find('td').eq(1).find('input').val();
+            //alert(objectid);
+            $.ajax({
+                type: "POST",    //type de requête utilisé par ajax
+                url: "/ume/delieums/", //lien de la view qui gère la requête post pour trier les colis des um entree vers des bcs avec une ums ouverte
+                data: {
+                    'id': objectid,
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
+                },
+                success: function (msg, data, settings) {
+                    console.log("gg " + msg);
+                    //location.reload();
+                    window.location.reload();
+                },
+                failure: function () {
+                    console.log("fail");
+                    //location.reload();
+                }
+            });
+        });
+
+        $('#desti').click(function () {
+            var iddes = "0";
+            '{% for items in ums %}'
+            if ('{{ items.idUniteManutentionSortie }}' == '{{ id }}') {
+                iddes = '{{ items.fk_BonCommandeSortie.fk_Destinataire.idDestinataire|safe }}';
+            }
+            '{% endfor %}'
+            if (iddes != "0") {
+                window.location.href = "{% url 'destinatairemodify' %}?id=" + iddes;
+            }
+        });
+        $('#bcsid').click(function () {
+            var idbcs = "0";
+            '{% for items in ums %}'
+            if ('{{ items.idUniteManutentionSortie }}' == '{{ id }}') {
+                idbcs = '{{ items.fk_BonCommandeSortie.idBonCommandeSortie|safe }}';
+            }
+            '{% endfor %}'
+            if (idbcs != "0") {
+                window.location.href = "{% url 'bonCommandeSortiemodify' %}?id=" + idbcs;
+            }
+        });
         //sorting (trie) du tableau par rapport a ncolis, je recois des objets en js, puis les passe en jquery avec le $ pour utiliser les fonctions jquery
         if ($('#tabblbody').length > 0) {
             var table, rows, switching, i, x, y, shouldSwitch;
